[gd_scene load_steps=14 format=2]

[ext_resource path="res://Player/Player.png" type="Texture" id=1]
[ext_resource path="res://Companion/Companion.gd" type="Script" id=2]
[ext_resource path="res://Utilities/TargetDetectionZone.tscn" type="PackedScene" id=3]
[ext_resource path="res://Overlap/SoftCollision.tscn" type="PackedScene" id=4]
[ext_resource path="res://Overlap/HurtBox.tscn" type="PackedScene" id=5]
[ext_resource path="res://Utilities/Stats.tscn" type="PackedScene" id=6]
[ext_resource path="res://Overlap/HitBox.tscn" type="PackedScene" id=7]

[sub_resource type="CircleShape2D" id=1]
radius = 11.8944

[sub_resource type="CircleShape2D" id=6]
radius = 14.6299

[sub_resource type="CapsuleShape2D" id=2]
height = 12.1405

[sub_resource type="CapsuleShape2D" id=3]
radius = 21.6531
height = 0.116779

[sub_resource type="CircleShape2D" id=4]
radius = 155.862

[sub_resource type="CircleShape2D" id=5]
radius = 288.293

[node name="Companion" type="KinematicBody2D" groups=[
"PersistCompanion",
]]
collision_layer = 8
collision_mask = 5
script = ExtResource( 2 )
MAX_SPEED = 300

[node name="Name" type="Label" parent="."]
margin_left = -20.3283
margin_top = -42.5692
margin_right = 19.6717
margin_bottom = -28.5692
text = "Friend"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Command" type="Label" parent="."]
margin_left = -20.2457
margin_top = -58.9765
margin_right = 19.7543
margin_bottom = -44.9765
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.345098, 1, 0.0156863, 1 )
position = Vector2( -0.527038, -10.5407 )
scale = Vector2( 0.636568, 0.664831 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -0.631111, -4.04408 )
scale = Vector2( 0.798554, -0.794548 )
shape = SubResource( 1 )

[node name="HitBox" parent="." instance=ExtResource( 7 )]
collision_mask = 64
damage = 2

[node name="CollisionShape2D" parent="HitBox" index="0"]
position = Vector2( -0.52446, -11.8879 )
shape = SubResource( 6 )

[node name="HurtBox" parent="." instance=ExtResource( 5 )]
visible = false
collision_layer = 32

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2( -0.349651, -10.839 )
shape = SubResource( 2 )

[node name="SoftCollision" parent="." instance=ExtResource( 4 )]

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
visible = false
position = Vector2( -3.8147e-06, -10.0879 )
rotation = -1.5708
shape = SubResource( 3 )

[node name="EnemyDetectionZone" parent="." instance=ExtResource( 3 )]
visible = false
collision_mask = 4

[node name="CollisionShape2D" parent="EnemyDetectionZone" index="0"]
visible = false
shape = SubResource( 4 )

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 3 )]
visible = false
collision_mask = 2

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
shape = SubResource( 5 )

[node name="Stats" parent="." instance=ExtResource( 6 )]
max_health = 10
[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]

[editable path="HitBox"]

[editable path="HurtBox"]

[editable path="SoftCollision"]

[editable path="EnemyDetectionZone"]

[editable path="PlayerDetectionZone"]
